==> Katinor/SuperGreatCan/kernel/driver/lib_at86rf/src/PAL/SAM3S/Generic/Src/pal_timer.c <==
#include "../../../../../ubiconfig.h"
#include <stdbool.h>
#include <stdint.h>
#include <stddef.h>
#include <stdlib.h>
#include "../../../Inc/pal.h"
#include "../../../../Include/return_val.h"
#include "../Inc/pal_timer.h"
#include "../../../../Include/_app_config.h"

retval_t pal_timer_start(uint8_t timer_id,
                         uint32_t timer_count,
                         timeout_type_t timeout_type,
                         FUNC_PTR timer_cb,
                         void *param_cb)
{
    uint32_t now;
    uint32_t point_in_time;

    if (timer_id >= TOTAL_NUMBER_OF_TIMERS)
    {
        return PAL_TMR_INVALID_ID;
    }

    if (NULL == timer_cb)
    {
        return MAC_INVALID_PARAMETER;
    }

    if (NULL != timer_array[timer_id].timer_cb)
    {
        /*
         * Timer is already running if the callback function of the
         * corresponding timer index in the timer array is not NULL.
         */
        return PAL_TMR_ALREADY_RUNNING;
    }

    now = gettime();

    /* The timeout is pre scaled according to the clock period. */
#if 	   (1 == EXCLUDE_MODIFICATION_FOR_UBINOS)
    timer_count = (uint32_t)(timer_count / CLOCK_PERIOD);
#else 	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
    timer_count = (uint32_t) USEC_TO_TIMERTICK(timer_count);
#endif	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */

    switch(timeout_type)
    {
        case TIMEOUT_RELATIVE:
        {
            if ((timer_count > MAX_TIMEOUT) || (timer_count < MIN_TIMEOUT))
            {
                return PAL_TMR_INVALID_TIMEOUT;
            }

            point_in_time = ADD_TIME(timer_count, now);
        }
        break;

        case TIMEOUT_ABSOLUTE:
        {
            uint32_t timeout;

            timeout = SUB_TIME(timer_count, now);

            if ((timeout > MAX_TIMEOUT) || (timeout < MIN_TIMEOUT))
            {
                return PAL_TMR_INVALID_TIMEOUT;
            }
            point_in_time = timer_count;
        }
        break;

        default:
            return MAC_INVALID_PARAMETER;
    }

    start_absolute_timer(timer_id, point_in_time, timer_cb, param_cb);
    return MAC_SUCCESS;
}

retval_t pal_start_high_priority_timer(uint8_t timer_id,
                                       uint16_t timer_count,
                                       FUNC_PTR timer_cb,
                                       void *param_cb)
{
    if (timer_id >= TOTAL_NUMBER_OF_TIMERS)
    {
        return PAL_TMR_INVALID_ID;
    }

    if (NULL == timer_cb)
    {
        return MAC_INVALID_PARAMETER;
    }

    if (NULL != timer_array[timer_id].timer_cb)
    {
        /*
         * Irrespective of the type, the timer is already running if the
         * callback function of the corresponding timer index in the timer
         * array is not NULL.
         */
        return PAL_TMR_ALREADY_RUNNING;
    }

    /*
     * A high priority timer can be started, as currently
     * there is no high priority timer running.
     */
    {
        uint32_t tc_status;

        ENTER_CRITICAL_REGION();

        high_priority_timer_id = timer_id;
        /*
         * The corresponding running timer queue's timer index is updated
         * with the new values.
         */

#if 	   (1 == EXCLUDE_MODIFICATION_FOR_UBINOS)
        timer_count = (uint32_t)(timer_count / CLOCK_PERIOD);
#else 	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
        timer_count = (uint32_t) USEC_TO_TIMERTICK(timer_count);
#endif	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
        timer_array[timer_id].abs_exp_timer = timer_count;
        timer_array[timer_id].timer_cb = timer_cb;
        timer_array[timer_id].param_cb = param_cb;
        timer_array[timer_id].next_timer_in_queue = NO_TIMER;

        LEAVE_CRITICAL_REGION();

        /*
         * The status register is read to clear any pending compare match
         * interrupts.
         */
        tc_status = AT91C_BASE_TC1->TC_SR;

        /* The timer channel 1 interrupt in AIC is enabled. */
        AT91C_BASE_AIC->AIC_IECR = _BV(AT91C_ID_TC1);

        /* The compare match interrupt is enabled for timer channel 1. */
        AT91C_BASE_TC1->TC_IER = AT91C_TC_CPCS;

        /* The compare register is programmed. */
        AT91C_BASE_TC1->TC_RC = timer_count;

        /* Clock from PMC, for timer channel 1 is enabled here. */
        AT91C_BASE_PMC->PMC_PCER = _BV(AT91C_ID_TC1);

        /* Clock is enabled at tht timer level. */
        AT91C_BASE_TC1->TC_CCR = AT91C_TC_CLKEN;

        /* Timer channel 1 is triggered. */
        AT91C_BASE_TC1->TC_CCR = AT91C_TC_SWTRG ;

        /*
         * Done to avoid compiler warning about variable being not used after
         * setting.
         */
        tc_status = tc_status;
    }

    return MAC_SUCCESS;
}

retval_t pal_stop_high_priority_timer(uint8_t timer_id)
{
    retval_t timer_stop_status = PAL_TMR_NOT_RUNNING;
    uint32_t tc_status;

    ENTER_CRITICAL_REGION();

    if (timer_id == high_priority_timer_id)
    {
        /*
         * The clock to the timer channel 1 is disabled here. It will be
         * re-enabled again while starting the high priority timer next time.
         */
        PERIPHERAL_CLOCK_DISABLE(AT91C_ID_TC1);

        /* The compare match interrupt of timer channel 1 is disabled. */
        AT91C_BASE_TC1->TC_IDR = AT91C_TC_CPCS;

        /*
         * The status register is read to clear any pending compare match
         * interrupts.
         */
        tc_status = AT91C_BASE_TC1->TC_SR;

        /*
         * Done to avoid compiler warning about variable being not used after
         * setting.
         */
        tc_status = tc_status;

        /* The timer channel 1 interrupts in AIC is disabled. */
        AT91C_BASE_AIC->AIC_IDCR = _BV(AT91C_ID_TC1);

        timer_array[high_priority_timer_id].next_timer_in_queue = NO_TIMER;
        timer_array[high_priority_timer_id].timer_cb = NULL;
        high_priority_timer_id = NO_TIMER;

        timer_stop_status = MAC_SUCCESS;
    }

    LEAVE_CRITICAL_REGION();

    return timer_stop_status;
}

void timer_init(void)
{
#if ((TOTAL_NUMBER_OF_TIMERS > 0) || defined(DOXYGEN))
    /*
     * Initialize the timer resources like timer arrays
     * queues, timer registers
     */
    uint8_t index;

    running_timers = 0;
    timer_trigger = false;
    sys_time = 0;

    running_timer_queue_head = NO_TIMER;
    expired_timer_queue_head = NO_TIMER;
    expired_timer_queue_tail = NO_TIMER;
#ifdef ENABLE_HIGH_PRIO_TMR
    high_priority_timer_id = NO_TIMER;
#endif

    for (index = 0; index < TOTAL_NUMBER_OF_TIMERS; index++)
    {
        timer_array[index].next_timer_in_queue = NO_TIMER;
        timer_array[index].timer_cb = NULL;
    }
#endif  /* #if ((TOTAL_NUMBER_OF_TIMERS > 0) || defined(DOXYGEN)) */

    /* Do non-generic/PAL specific actions here. */
    timer_init_non_generic();
}

void pal_get_current_time(uint32_t *current_time)
{
#if 	   (1 == EXCLUDE_MODIFICATION_FOR_UBINOS)
    *current_time = (uint32_t)((gettime() * CLOCK_PERIOD));
#else 	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
    *current_time = (uint32_t)(TIMERTICK_TO_USEC(gettime()));
#endif	/* (1 == EXCLUDE_MODIFICATION_FOR_UBINOS) */
}

static void start_absolute_timer(uint8_t timer_id,
                          uint32_t point_in_time,
                          FUNC_PTR handler_cb,
                          void *parameter)
{
    ENTER_CRITICAL_REGION();

    /* Check is done to see if any timer has expired */
    internal_timer_handler();

    bool load_reg_rc = false;

    if (NO_TIMER == running_timer_queue_head)
    {
        running_timer_queue_head = timer_id;
        timer_array[timer_id].next_timer_in_queue = NO_TIMER;
        /*
         * This is the only timer running in the timer queue, hence load the
         * TC_RC register.
         */
        load_reg_rc = true;
    }
    else
    {
        uint8_t i;
        bool timer_inserted = false;
        uint8_t curr_index = running_timer_queue_head;
        uint8_t prev_index = running_timer_queue_head;

        for (i = 0; i < running_timers; i++)
        {
            if (NO_TIMER != curr_index)
            {
                if (compare_time(timer_array[curr_index].abs_exp_timer,
                                     point_in_time))
                {
                    /*
                     * Requested absolute time value is greater than the time
                     * value pointed by the curr_index in the timer array
                     */
                    prev_index = curr_index;
                    curr_index = timer_array[curr_index].next_timer_in_queue;
                }
                else
                {
                    timer_array[timer_id].next_timer_in_queue = curr_index;
                    if (running_timer_queue_head == curr_index)
                    {
                        /* Insertion at the head of the timer queue. */
                        running_timer_queue_head = timer_id;
                        /*
                         * Timer is inserted at the head of the queue, hence
                         * load the TC_RC.
                         */
                        load_reg_rc = true;
                    }
                    else
                    {
                        timer_array[prev_index].next_timer_in_queue = timer_id;
                    }
                    timer_inserted = true;
                    break;
                }
            }
        }
        if (!timer_inserted)
        {
            /* Insertion at the tail of the timer queue. */
            timer_array[prev_index].next_timer_in_queue = timer_id;
            timer_array[timer_id].next_timer_in_queue = NO_TIMER;
        }
    }
    timer_array[timer_id].abs_exp_timer = point_in_time;
    timer_array[timer_id].timer_cb = (FUNC_PTR)handler_cb;
    timer_array[timer_id].param_cb = parameter;
    running_timers++;

    /*
     * If there is only one timer in the timer queue
     * the timeout should be loaded immediately
     */
    if (load_reg_rc)
    {
        prog_reg_rc();
    }

    LEAVE_CRITICAL_REGION();
}
