==> Katinor/SuperGreatCan/kernel/driver/lib_at86rf/src/PAL/MEGA_RF/ATMEGA128RFA1/Src/pal_timer.c <==
#include "../../../../../ubiconfig.h"
#include <stdbool.h>
#include <stdint.h>
#include <stddef.h>
#include <stdlib.h>
#include "../../../Inc/pal.h"
#include "../../../../Include/return_val.h"
#include "../../Generic/Inc/pal_timer.h"
#include "../../../../Include/_app_config.h"
#define CONCAT(a,b) a##b
#define SC_READ32(reg)                  sc_read32(&CONCAT(reg,HH), \
                                                  &CONCAT(reg,HL), \
                                                  &CONCAT(reg,LH), \
                                                  &CONCAT(reg,LL))
#define SC_WRITE32(reg,val) \
do { \
    union { uint8_t a[4]; uint32_t v; } x; \
    x.v = val; \
    CONCAT(reg,HH) = x.a[3]; \
    CONCAT(reg,HL) = x.a[2]; \
    CONCAT(reg,LH) = x.a[1]; \
    CONCAT(reg,LL) = x.a[0]; \
} while(0)
#define DELAY_WITHOUT_IRQS_US           (100)
#define MASK_LOW28                      (0x0FFFFFFFuL)
#define MASK_LOW27                      (0x07FFFFFFuL)
#define PAL_US_PER_SYMBOLS              (16)

retval_t pal_timer_start(uint8_t timer_id,
                         uint32_t timer_count,
                         timeout_type_t timeout_type,
                         FUNC_PTR timer_cb,
                         void *param_cb)
{
    uint32_t point_in_time;

    if (timer_id >= TOTAL_NUMBER_OF_TIMERS)
    {
        return PAL_TMR_INVALID_ID;
    }

    if (NULL == timer_cb)
    {
        return MAC_INVALID_PARAMETER;
    }

    if (NULL != timer_array[timer_id].timer_cb)
    {
        /*
         * Timer is already running if the callback function of the
         * corresponding timer index in the timer array is not NULL.
         */
        return PAL_TMR_ALREADY_RUNNING;
    }

    timer_count /= PAL_US_PER_SYMBOLS;

    switch(timeout_type)
    {
        case TIMEOUT_RELATIVE:
        {
            if ((timer_count > MAX_TIMEOUT / PAL_US_PER_SYMBOLS) || (timer_count < MIN_TIMEOUT / PAL_US_PER_SYMBOLS))
            {
                return PAL_TMR_INVALID_TIMEOUT;
            }

            point_in_time = timer_count + SC_READ32(SCCNT);
            point_in_time &= MASK_LOW28;
        }
        break;

        case TIMEOUT_ABSOLUTE:
        {
            uint32_t timeout;

            timeout = timer_count - SC_READ32(SCCNT);
            timeout &= MASK_LOW28;

            if ((timeout > MAX_TIMEOUT / PAL_US_PER_SYMBOLS) || (timeout < MIN_TIMEOUT / PAL_US_PER_SYMBOLS))
            {
                return PAL_TMR_INVALID_TIMEOUT;
            }
            point_in_time = timer_count;
        }
        break;

        default:
            return MAC_INVALID_PARAMETER;
    }

    start_absolute_timer(timer_id, point_in_time, timer_cb, param_cb);
    return MAC_SUCCESS;
}

retval_t pal_start_high_priority_timer(uint8_t timer_id,
                                       uint16_t timer_count,
                                       FUNC_PTR timer_cb,
                                       void *param_cb)
{
    timer_expiry_cb_t callback;
    uint32_t ocr;

    if (timer_id >= TOTAL_NUMBER_OF_TIMERS)
    {
        return PAL_TMR_INVALID_ID;
    }

    if (NULL == timer_cb)
    {
        return MAC_INVALID_PARAMETER;
    }

    if (NULL != timer_array[timer_id].timer_cb)
    {
        /*
         * Irrespective of the type, the timer is already running if the
         * callback function of the corresponding timer index in the timer
         * array is not NULL.
         */
        return PAL_TMR_ALREADY_RUNNING;
    }

    /*
     * A high priority timer can be started, as currently
     * there is no high priority timer running.
     */
    timer_count /= PAL_US_PER_SYMBOLS;
    if (timer_count == 0)
    {
        callback = (timer_expiry_cb_t)timer_cb;
        callback(param_cb);
        return MAC_SUCCESS;
    }

    ENTER_CRITICAL_REGION();

    high_priority_timer_id = timer_id;
    /*
     * The corresponding running timer queue's timer index is updated
     * with the new values
     */
    timer_array[timer_id].timer_cb = timer_cb;
    timer_array[timer_id].param_cb = param_cb;
    timer_array[timer_id].next_timer_in_queue = NO_TIMER;

    ocr = SC_READ32(SCCNT);
    ocr += timer_count;
    ocr &= MASK_LOW28;

    SCIRQS = _BV(IRQSCP3);
    SCIRQM |= _BV(IRQMCP3);

    SC_WRITE32(SCOCR3, ocr);

    timer_array[timer_id].abs_exp_timer = ocr;

    LEAVE_CRITICAL_REGION();

    return MAC_SUCCESS;
}

retval_t pal_stop_high_priority_timer(uint8_t timer_id)
{
    retval_t timer_stop_status = PAL_TMR_NOT_RUNNING;

    ENTER_CRITICAL_REGION();

    if (timer_id == high_priority_timer_id)
    {
        /* Turn off timer1 SCOCR3 interrupt */
        SCIRQS = _BV(IRQSCP3);
        SCIRQM |= _BV(IRQMCP3);

        timer_array[high_priority_timer_id].next_timer_in_queue = NO_TIMER;
        timer_array[high_priority_timer_id].timer_cb = NULL;
        high_priority_timer_id = NO_TIMER;

        timer_stop_status = MAC_SUCCESS;
    }

    LEAVE_CRITICAL_REGION();

    return timer_stop_status;
}

void timer_init(void)
{
#if ((TOTAL_NUMBER_OF_TIMERS > 0) || defined(DOXYGEN))
    /*
     * Initialize the timer resources like timer arrays
     * queues, timer registers
     */
    uint8_t index;

    running_timers = 0;
    timer_trigger = false;

    running_timer_queue_head = NO_TIMER;
    expired_timer_queue_head = NO_TIMER;
    expired_timer_queue_tail = NO_TIMER;
#ifdef ENABLE_HIGH_PRIO_TMR
    high_priority_timer_id = NO_TIMER;
#endif

    for (index = 0; index < TOTAL_NUMBER_OF_TIMERS; index++)
    {
        timer_array[index].next_timer_in_queue = NO_TIMER;
        timer_array[index].timer_cb = NULL;
    }
#endif  /* #if ((TOTAL_NUMBER_OF_TIMERS > 0) || defined(DOXYGEN)) */

    /*
     * Enable the 32 kHz crystal oscillator. This is required in
     * order to allow for the hardware performing a transparent clock
     * switch when the main 16 MHz crystal is turned off (i.e., when
     * the transceiver module is put to sleep).
     */
    ASSR = _BV(AS2);

    /*
     * Start the MAC symbol counter, resetting the prescaler by the
     * same time.  Also enable the rx timestamping feature.
     */
    SCCR0 = _BV(SCTSE) | _BV(SCEN) | _BV(SCRES);

    /*
     * Use SCOCR2 to implement a virtual 28-bit timer. This is needed
     * since all layers above PAL operate at a microsecond level, while
     * the MAC symbol counter operates at a granularity of MAC symbol
     * periods (16 µs).  Due to that, the timer values have to be
     * scaled at the PAL API border, and this scaling effectively
     * reduces the timer span to 28 bits.
     *
     * Whenever the timer is about to cross the 28-bit boundary, it is
     * advanced (by the ISR for SCOCR2) so the hardware will then
     * perform a real rollover at the next timer tick.  That way, the
     * worst effect from blocking interrupts for too long is that all
     * pending timers at the time of rollover will be delayed a bit.
     * If the SCOCR2 interrupt is served within 16 µs, no additional
     * delay will happen.
     */
    SC_WRITE32(SCOCR2, 0x0FFFFFFFul);
    SCIRQS = _BV(IRQSCP2);
    SCIRQM |= _BV(IRQMCP2);
}

void pal_get_current_time(uint32_t *current_time)
{
    while ((SCSR & _BV(SCBSY)) != 0)
    {
        ;
    }
    *current_time = PAL_US_PER_SYMBOLS * SC_READ32(SCCNT);
}

static void start_absolute_timer(uint8_t timer_id,
                          uint32_t point_in_time,
                          FUNC_PTR handler_cb,
                          void *parameter)
{
    ENTER_CRITICAL_REGION();

    point_in_time &= MASK_LOW28;

    /* Check is done to see if any timer has expired */
    internal_timer_handler();

    if (NO_TIMER == running_timer_queue_head)
    {
        running_timer_queue_head = timer_id;
        timer_array[timer_id].next_timer_in_queue = NO_TIMER;
    }
    else
    {
        uint8_t i;
        bool timer_inserted = false;
        uint8_t curr_index = running_timer_queue_head;
        uint8_t prev_index = running_timer_queue_head;

        for (i = 0; i < running_timers; i++)
        {
            if (NO_TIMER != curr_index)
            {
                if (compare_time(timer_array[curr_index].abs_exp_timer,
                                     point_in_time))
                {
                    /*
                     * Requested absolute time value is greater than the time
                     * value pointed by the curr_index in the timer array
                     */
                    prev_index = curr_index;
                    curr_index = timer_array[curr_index].next_timer_in_queue;
                }
                else
                {
                    timer_array[timer_id].next_timer_in_queue = curr_index;
                    if (running_timer_queue_head == curr_index)
                    {
                        /* Insertion at the head of the timer queue. */
                        running_timer_queue_head = timer_id;
                    }
                    else
                    {
                        timer_array[prev_index].next_timer_in_queue = timer_id;
                    }
                    timer_inserted = true;
                    break;
                }
            }
        }
        if (!timer_inserted)
        {
            /* Insertion at the tail of the timer queue. */
            timer_array[prev_index].next_timer_in_queue = timer_id;
            timer_array[timer_id].next_timer_in_queue = NO_TIMER;
        }
    }
    timer_array[timer_id].abs_exp_timer = point_in_time;
    timer_array[timer_id].timer_cb = (FUNC_PTR)handler_cb;
    timer_array[timer_id].param_cb = parameter;
    running_timers++;

    prog_ocr();

    LEAVE_CRITICAL_REGION();
}
